# MagicBox-Backend

./: .gitignore  ARCHITECTURE_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  JSON_PARSING_FIX.md  MIGRATION_GUIDE.md  PATH_FIX_SUMMARY.md  TESTING_GUIDE.md  pyproject.toml
backend/: .env  .env.example  API_AUTH_TESTING_GUIDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONNECTOR_SYSTEM.md  Dockerfile  ENHANCEMENTS_VS_SYNTAGRO.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  INSTALL_FFMPEG_WINDOWS.md  QUICK_FFMPEG_FIX.md  QUICK_START_SCHEDULING.md  QUICK_TEST.py  RABBITMQ_SETUP.md  README.md  REMOVE_VENV_FROM_GIT.md  SCHEDULING_FEATURE_SUMMARY.md  SCHEDULING_SETUP.md  SIMPLE_FFMPEG_INSTALL.md  SOCIAL_MEDIA_API_REQUIREMENTS.md  SWAGGER_AUTH_TROUBLESHOOTING.md  TEST_RESULTS.md  VIDEO_30SEC_IMPLEMENTATION.md  alembic.ini  docker-compose.yml  fix_all_models.py  fix_run.py  install_ffmpeg.ps1  install_ffmpeg_simple.bat  pyproject.toml  requirements.txt  test_ai_services.py  test_all_services.py  test_rabbitmq_connection.py  test_services_simple.py
backend/docs/: AGENT_ORCHESTRATION.md  VIDEO_GENERATION_30SEC.md
backend/migrations/: env.py
backend/migrations/versions/: 43eabfbacfc3_initial_schema.py  670e29479383_enhance_roles_and_tenants_tables.py  9c1d2f3a4b5c_enable_pgvector_and_fix_embeddings.py  a1b2c3d4e5f6_add_project_agent_table.py  b2c3d4e5f6a7_add_agent_id_to_conversations.py  c2a0b8f1d3e4_add_oauth_states.py  e632d777d01d_fix_tenant_columns.py  f7b592ca7922_add_all_architecture_models.py
backend/src/app/: celery_app.py  main.py
backend/src/app/ai/agents/: base_agent.py  conversational_agent.py  image_agent.py  image_chat_agent.py  post_agent.py  reel_agent.py  reel_chat_agent.py
backend/src/app/ai/embeddings/: embedder.py  vector_store.py
backend/src/app/ai/memory/: episodic_memory.py  (+2 more)
backend/src/app/config/: constants.py  logging.py  settings.py
backend/src/app/db/: base.py  database.py  session.py
backend/src/app/dependencies/: auth.py
backend/src/app/events/: consumer.py  event_types.py  publisher.py  publisher_bus.py
backend/src/app/integrations/: __init__.py  facebook.py  google_oauth.py  instagram.py  linkedin.py  tiktok.py  twitter.py  whatsapp.py  youtube.py
backend/src/app/middleware/: auth.py  rate_limit.py  rbac.py  request_context.py  tenant.py
backend/src/app/schemas/: artifact.py  auth.py  brand_persona.py  connector.py  conversation.py  project.py  role.py  run.py  tenant.py  user.py
backend/src/app/security/: audit.py  encryption.py  secrets.py
backend/src/app/services/: ai_image_service.py  ai_service.py  ai_video_service.py  artifact_service.py  auth_service.py  billing_service.py  chat_content_service.py  connector_service.py  content_service.py  conversation_service.py  credit_service.py  embedding_service.py  integration_factory.py  project_service.py  prompt_loader.py  scheduling_service.py  social_service.py  usage_service.py
backend/src/app/tasks/: __init__.py  notification_tasks.py  publishing_tasks.py
backend/src/app/utils/: errors.py  ids.py  time.py
backend/src/app/workers/: ai_worker.py  celery_app.py  gdpr_worker.py  social_worker.py  usage_worker.py
backend/src/magicbox_backend.egg-info/: SOURCES.txt  requires.txt
(+69 files in other folders)
